--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation header -->
+    <header class="bg-blue-600 text-white p-4 shadow-md">
+        <div class="max-w-6xl mx-auto flex items-center justify-between">
+            <h1 class="text-2xl font-bold">AI for GP</h1>
+            <nav>
+                <ul class="flex space-x-6">
+                    <li><a href="index.html" class="font-bold border-b-2 border-white">Prompt Collection</a></li>
+                    <li><a href="teach.html" class="hover:underline">T.E.A.C.H. Framework</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <div id="root"></div>
     
     <!-- Custom JavaScript -->
@@ -44,9 +57,9 @@
               <!-- Teacher Image -->
               <svg width="100" height="150" viewBox="0 0 100 150" xmlns="http://www.w3.org/2000/svg">
                 <!-- Head -->
-                <circle cx="50" cy="40" r="30" fill="#FFDFC4"/>
+                <circle cx="50" cy="40" r="30" fill="#8D5524"/>
                 <!-- Hair -->
-                <path d="M25 30 Q50 0 75 30" stroke="#663300" stroke-width="20" fill="none"/>
+                <path d="M25 30 Q50 0 75 30" stroke="#221A0F" stroke-width="20" fill="none"/>
                 <!-- Body -->
                 <rect x="35" y="70" width="30" height="60" fill="#6495ED"/>
                 <!-- Eyes -->
@@ -111,6 +124,17 @@
         </svg>
         How to Use AI Prompts
       </button>
+    </div>
+
+    <!-- Learn more about T.E.A.C.H. button -->
+    <div class="fixed bottom-4 right-4">
+      <a href="teach.html" class="px-4 py-2 bg-green-600 text-white rounded-lg shadow-lg hover:bg-green-700 transition-colors flex items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2">
+          <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+          <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+        </svg>
+        Learn the T.E.A.C.H. Framework
+      </a>
     </div>
 
     <!-- Include the animation.js script -->
